feat(*): ajustar roteamento entre a tela de login e area logada e ajustar unmount do parcel product

--- a/portal-single-spa/src/index.ejs
+++ b/portal-single-spa/src/index.ejs
@@ -101,6 +101,10 @@
     System.import('@dgmodesto/root-config');
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/zone.js@0.10.3/dist/zone.min.js"></script>
+
 </body>
 
 </html>
