--- a/portal-angular-container/src/app/app.component.html
+++ b/portal-angular-container/src/app/app.component.html
@@ -1,25 +1,52 @@
 <header>
-  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  bg-light border-bottom box-shadow">
+  <nav
+    class="
+      navbar navbar-expand-sm navbar-toggleable-sm navbar-light
+      bg-light
+      border-bottom
+      box-shadow
+    "
+  >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/angular/container']">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg"
-          class="logo-pizza-delicious-header" />
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg"
+          class="logo-pizza-delicious-header"
+        />
       </a>
 
-      <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-
-
+      <div
+        class="
+          navbar-collapse
+          collapse
+          d-sm-inline-flex
+          flex-sm-row-reverse
+          col-md-8
+        "
+      >
         <ul class="navbar-nav flex-grow-1">
           <li class="nav-item">
             <a class="nav-link text-dark active" [routerLink]="['/']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" [routerLink]="['/angular-customer/customer/list']">Clientes</a>
+            <a
+              class="nav-link text-dark"
+              [routerLink]="['/angular-customer/customer/list']"
+              >Clientes</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" [routerLink]="['/angular-advisor/advisor/list']">Assessores</a>
+            <a
+              class="nav-link text-dark"
+              [routerLink]="['/angular-advisor/advisor/list']"
+              >Assessores</a
+            >
           </li>
         </ul>
+      </div>
+      <div class="col-md-4 d-flex justify-content-end">
+        <a class="nav-link text-dark" href="/angular-auth">Logout</a>
+        <!-- <a class="nav-link text-dark" [routerLink]="['angular-auth']">Logout</a> -->
       </div>
     </div>
   </nav>
