--- a/portal-angular-auth/src/app/app.component.html
+++ b/portal-angular-auth/src/app/app.component.html
@@ -4,9 +4,12 @@
       <div class="card-header">
         <h3>Login</h3>
         <div class="d-flex justify-content-end social_icon">
-          <span><i class="fab fa-facebook-square"></i></span>
-          <span><i class="fab fa-google-plus-square"></i></span>
-          <span><i class="fab fa-twitter-square"></i></span>
+          <a href="https://github.com/dgmodesto" target="_blank">
+            <span><i class="fab fa-github-square"></i></span>
+          </a>
+          <a href="https://www.linkedin.com/in/douglasmodesto/" target="_blank">
+            <span><i class="fab fa-linkedin"></i></span>
+          </a>
         </div>
       </div>
       <div class="card-body">
