--- a/portal-angular-container/src/app/app.component.html
+++ b/portal-angular-container/src/app/app.component.html
@@ -8,7 +8,7 @@
     "
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/angular/container']">
+      <a class="navbar-brand" [routerLink]="['/angular-advisor/advisor/list']">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Angular_full_color_logo.svg"
           class="logo-pizza-delicious-header"
@@ -25,9 +25,9 @@
         "
       >
         <ul class="navbar-nav flex-grow-1">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link text-dark active" [routerLink]="['/']">Home</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a
               class="nav-link text-dark"
