feat(guart-route): incluir guard nas rotas de assessores e no parcel de produtos

--- a/portal-angular-auth/src/app/app.component.html
+++ b/portal-angular-auth/src/app/app.component.html
@@ -33,6 +33,7 @@
               name="password"
               class="form-control"
               formControlName="password"
+              placeholder="senha"
               type="password"
             />
           </div>
