feat(guart-route): incluir guard nas rotas de assessores e no parcel de produtos

--- a/portal-angular-product/src/app/components/list/list.component.html
+++ b/portal-angular-product/src/app/components/list/list.component.html
@@ -11,14 +11,14 @@
     <thead class="thead-dark">
       <tr>
         <th>Nome</th>
-        <th>Documento</th>
+        <th>Descrição</th>
         <th>Ativo?</th>
         <th></th>
       </tr>
     </thead>
-    <tr *ngFor="let client of [1, 2, 3, 4, 5, 6, 7, 8, 9]">
+    <tr *ngFor="let client of [1, 2, 3, 4, 5]">
       <td>Guide Cash I</td>
-      <td>341.888.999-78</td>
+      <td>Produto com alto rendimento</td>
       <td>
         <input
           [checked]="true"
