--- a/portal-angular-advisor/src/app/pages/advisor/components/list/list.component.html
+++ b/portal-angular-advisor/src/app/pages/advisor/components/list/list.component.html
@@ -37,7 +37,7 @@
           <th></th>
         </tr>
       </thead>
-      <tr *ngFor="let client of [1, 2, 3, 4, 5, 6, 7, 8, 9]">
+      <tr *ngFor="let client of [1, 2, 3, 4]">
         <td>Douglas Gomes Modesto</td>
         <td>341.888.999-78</td>
         <td>
