--- a/portal-single-spa/src/styles/global.css
+++ b/portal-single-spa/src/styles/global.css
@@ -1,3 +1,11 @@
 /* @import "https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"; */
-@import url('./bootstrap.css');
-@import url('./bootstrap.min.css');
+@import url("./bootstrap.css");
+@import url("./bootstrap.min.css");
+
+body {
+  font-family: "Montserrat", sans-serif;
+  /* default font size is 16px */
+  font-size: 1.2rem;
+  background-color: #efefef;
+  margin: 0;
+}
