--- a/portal-angular-auth/src/styles.css
+++ b/portal-angular-auth/src/styles.css
@@ -3,7 +3,7 @@
 html,
 body {
   background-color: whitesmoke;
-  background-image: url("http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg") !important;
+  /* background-image: url("http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg") !important; */
   background-size: cover;
   background-repeat: no-repeat;
   height: 100%;
